--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
    
-    <h1 class="classA">My Data Table</h1>
-    <div ><table class="tableAA table table-bordered table-hover">
+    <h1 class="titleX">My Data Table</h1>
+    <div><table class="tableX table table-bordered table-hover col text-center">
         <thead class="table-dark">
             <tr>
-                <th><i class="bi bi-circle-fill"></i></th>
+                <th><i id="#mycircle" class="bi bi-circle-fill"></i></th>
                 <th>Join date</th>
                 <th>First name</th>
                 <th>Last name</th>
