--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Data Table</title>
-    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-    
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
 </head>
 </head>
 <body>
    
-    <h1 class="titleX">My Data Table</h1>
-    <div><table class="tableX table table-bordered table-hover col text-center">
+    
+    <div class="container">
+        <h1 class="titleX">My Data Table</h1>
+        <table class="tableX table table-bordered table-hover col text-center">
         <thead class="table-dark">
             <tr>
                 <th><i id="#mycircle" class="bi bi-circle-fill"></i></th>
