--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <div class="container">
         <h1 class="titleX">My Data Table</h1>
-        <table class="tableX table table-bordered table-hover col text-center">
+        <div class="table-container"><table class="tableX table table-bordered table-hover col text-center">
         <thead class="table-dark">
             <tr>
                 <th><i id="#mycircle" class="bi bi-circle-fill"></i></th>
@@ -31,6 +31,7 @@
         <tbody class="table-striped">
         </tbody>
     </table></div>
+</div>
 
     
 </body>
