--- a/index.html
+++ b/index.html
@@ -9,29 +9,43 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 
 </head>
 </head>
 <body>
    
-    
-    <div class="container">
-        <h1 class="titleX">My Data Table</h1>
-        <div class="table-container"><table class="tableX table table-bordered table-hover col text-center">
-        <thead class="table-dark">
-            <tr>
-                <th><i id="#mycircle" class="bi bi-circle-fill"></i></th>
-                <th>Join date</th>
-                <th>First name</th>
-                <th>Last name</th>
-            </tr>
-        </thead>
-        <tbody class="table-striped">
-        </tbody>
-    </table></div>
-</div>
+    <main class="table">
+        <section class="table-header">
+            <h1 class="my-title">My Data Table</h1>
+        </section>
+        <section class="input-group">
+            <!-- <i class="bi bi-search"></i> -->
+            <input type="search" placeholder="Search by name, year, etc... &#128269;"></input>
+        </section>
+        <section class="table-body"> 
+            <table>
+                <thead>
+                    <tr>
+                        <th>Year</th>
+                        <th>Join date</th>
+                        <th>First name</th>
+                        <th>Last name</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- <tr>
+                        <th><i id="#mycircle" class="bi bi-circle-fill"></i></th>
+                        <th>Join date</th>
+                        <th>Join date</th>
+                        <th>First name</th>
+                        <th>Last name</th>
+                    </tr> -->
+                </tbody>
+            </table>
+        </section>
+    </main>
 
     
 </body>
